[workspace]
resolver = "2"

members = [
    "rest_tensors",
    "rest_libcint",
    "rest",
    "rest_regression", 
    #"utilities/similarity_check", 
    #"utilities/trajectory_analysis"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
#panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
